--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<form action = "http://localhost:3000/Cat" method = "POST">
+<form action = "http://env-1540370.jelastic.metropolia.fi/Cat" method = "POST">
     Name: <input type = "text" name = "name">  <br>
     Age: <input type = "text" name = "age">  <br>
     Gender: <input type = "text" name = "gender">  <br>
